--- a/ice/w5a/package.json
+++ b/ice/w5a/package.json
@@ -1,7 +1,7 @@
 {
   "name": "w4",
   "version": "1.0.0",
-  "description": "",
+  "description": "Working in a team of 2-3, start with the code in ice/w5a in the class repository.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.12.0"
+  },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
