--- a/ice/w5a/package.json
+++ b/ice/w5a/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.12.0"
+    "css-loader": "^3.4.2",
+    "react": "^16.12.0",
+    "style-loader": "^1.1.3"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
