--- a/labs/2/package.json
+++ b/labs/2/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "w4",
+  "name": "2",
   "version": "1.0.0",
-  "description": "Working in a team of 2-3, start with the code in ice/w5a in the class repository.",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch"
   },
@@ -11,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^3.4.2",
-    "react": "^16.12.0",
-    "style-loader": "^1.1.3"
-  },
-  "devDependencies": {
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "npm-watch": "^0.6.0",
+    "style-loader": "^1.1.3",
+    "watch": "^1.0.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
