--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
     "jest": "^24.9.0",
     "npm-watch": "^0.6.0",
     "webpack": "^4.41.5"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
